--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
+
+# Ignore Python cache and environment folders
 __pycache__/
 env/
 frontend/
+
+*.pyc
+
+# Ignore environment variable files
+.env
+
+# Ignore IDE-specific files
+.vscode/
+.idea/
+
+# Ignore operating system files
+.DS_Store
+Thumbs.db
